engl only version done

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -7,13 +7,17 @@
 	"Do you really want to exit this game session? You can only re-enter by knowing the session id.": "Möchtest Du wirklich die Spiel-Session verlassen? Du kannst nur in das Spiel zurück kehren, wenn Du die Session ID kennst.",
 	"No thanks": "Nein danke",
 	"Back to home": "Zurück zu Start",
+	"Invite other players": "Spieler einladen",
+	"Invite your friends with the following link:": "Lade weitere Spieler ein, indem Du Ihnen den folgenden Link sendest:",
 	"Edit Player": "Spieler bearbeiten",
 	"Close": "Schließen",
 	"Delete player": "Spieler löschen",
+	"Do you really want to delete this player?": "Möchtest Du den Spieler wirklich löschen?",
+	"Back": "Zurück",
+	"Yes, delete player": "Ja, Spieler löschen",
 	"Ring Of Fire": "Ring des Feuers",
-	"Switch language": "Sprache wechseln",
-	"About": "Informationen",
-	"Leave game": "Spiel verlassen",
+	"About this game": "Über dieses Spiel",
+	"Exit game": "Spiel verlassen",
 	"Please create a player to": "Bitte erstelle einen Spieler, um ",
 	"start": "zu starten",
 	"continue": "weiter zu spielen",
