--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,13 +7,17 @@
 	"Do you really want to exit this game session? You can only re-enter by knowing the session id.": "Do you really want to exit this game session? You can only re-enter by knowing the session id.",
 	"No thanks": "No thanks",
 	"Back to home": "Back to home",
+	"Invite other players": "Invite other players",
+	"Invite your friends with the following link:": "Invite your friends with the following link:",
 	"Edit Player": "Edit Player",
 	"Close": "Close",
 	"Delete player": "Delete player",
+	"Do you really want to delete this player?": "Do you really want to delete this player?",
+	"Back": "Back",
+	"Yes, delete player": "Yes, delete player",
 	"Ring Of Fire": "Ring Of Fire",
-	"Switch language": "Switch language",
-	"About": "About",
-	"Leave game": "Leave game",
+	"About this game": "About this game",
+	"Exit game": "Exit game",
 	"Please create a player to": "Please create a player to",
 	"start": "start",
 	"continue": "continue",
