--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -21,5 +21,5 @@
 	"Please create a player to": "Bitte erstelle einen Spieler, um ",
 	"start": "zu starten",
 	"continue": "weiter zu spielen",
-	"Please create add least one player by clicking the \"+\" button": "Bitte erstelle mindestens einen Spieler, indem Du das \"+\" klickst."
+	"Create add least one player by clicking the \"+\" button. After creation any player can be edited by clicking on the profile picture.": "Erstelle mindestens einen Spieler, indem Du das \"+\" klickst. Nach der Erstellung kann jeder Spieler mit einem Klick auf das Profilbild bearbeitet werden."
 }
