--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -21,5 +21,5 @@
 	"Please create a player to": "Please create a player to",
 	"start": "start",
 	"continue": "continue",
-	"Please create add least one player by clicking the \"+\" button": "Please create add least one player by clicking the \"+\" button"
+	"Create add least one player by clicking the \"+\" button. After creation any player can be edited by clicking on the profile picture.": "Create add least one player by clicking the \"+\" button. After creation any player can be edited by clicking on the profile picture."
 }
